--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link src="home.css">
+    <link href = "home.css" rel = "stylesheet">
 </head>
 <body>
     <nav>
@@ -13,6 +13,14 @@
     <section id="tshirts">
         <img src=""> <!--  img1.jpg> -->
     </section>
+    <footer>
+        <h2 id = "contact_us_heading">Contact us</h2>
+        <ul id = "instagrams">
+            <a href = "https://www.instagram.com/m.d.i.m.i.t.r.o.v/"><li>@m.d.i.m.i.t.r.o.v</li></a>
+            <a href = "https://www.instagram.com/tova_e_sasho/"><li>@tova_e_sasho</li></a>
+            <a href = "https://www.instagram.com/deyangolosmanov/"><li>@deyangolosmanov</li></a>
+        </ul>
+    </footer>
     <script src="home.js"></script>
     
 </body>
