added every section in home page

--- a/home.html
+++ b/home.html
@@ -10,9 +10,23 @@
     <nav>
         <a></a>
     </nav>
-    <section id="tshirts">
-        <img src=""> <!--  img1.jpg> -->
-    </section>
+    <div id="tshirts">
+        <a href="tshirts.html"><img id = "TshirtImg" src="img1.png"></a> 
+        <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+    </div><br>
+    <div id="pants">
+        <a href="pants.html"><img id = "PantsImg" src="img2.png"></a> 
+        <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+    </div><br>
+    <div id="sunglasses">
+        <a href="sunglasses.html"><img id = "SunglassesImg" src="img3.png"></a> 
+        <p id="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+    </div><br>
+    <div id="shoes">
+        <a href="shoes.html"><img id = "ShoesImg" src="img4.png"></a> 
+        <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+    </div>
+    
     <footer>
         <h2 id = "contact_us_heading">Contact us</h2>
         <ul id = "instagrams">
