Added navbar to shoes.html

--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -7,6 +7,18 @@
     <title>Trousers</title>
 </head>
 <body>
+    <nav>
+        <div id="container">
+            <ul class="menu">
+                <li id="Home"><a href="home.html">Home</a></li>
+                <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
+                <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
+                <li id="tshirts.html"><a href="jewery.html">Jewery</a></li>
+                <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
+                <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
+            </ul>
+        </div>
+    </nav>
     <div id = "shoes_offer1">
         <img id = "image_shoes_1" src = "shoes_11.jpg">
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
