added more style to home css

--- a/home.html
+++ b/home.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <nav>
-        <a></a>
+        <div id="container">
+            <ul class="menu">
+                <li id="Home"><a href="home.html">Home</a></li>
+                <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
+                <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
+                <li id="tshirts.html"><a href="jewery.html">Jewery</a></li>
+                <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
+                <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
+            </ul>
+        </div>
     </nav>
     <div id="tshirts">
-        <a href="tshirts.html"><img id = "TshirtImg" src="img1.png"></a> 
+        <a href="/Sasho_work/tshirts.html"><img id = "TshirtImg" src="img1.png"></a> 
         <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="pants">
