added right button for photo change, some style changes

--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "shoes.css">
+    <link rel = "stylesheet" href = "../Dido_work/navbar.css">
     <title>Trousers</title>
 </head>
 <body>
@@ -20,10 +21,12 @@
         </div>
     </nav>
     <div id = "shoes_offer1">
-        <img id = "image_shoes_1" src = "shoes_11.jpg">
+        <img id = "right_arrow" src = "right_arrow.png">
+        <img id = "image_shoes_1" src = "shoes_11.jpg" alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker">
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
+        <h2 id = "price_shoes_1">$99.99</h2>
         <button id = "add_to_card_shoes_1">Add to card</button>
     </div>
 </body>
