--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -11,10 +11,10 @@
     <nav>
         <div id="container">
             <ul class="menu">
-                <li id="Home"><a href="home.html">Home</a></li>
+                <li id="Home"><a href="../home.html">Home</a></li>
                 <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
-                <li id="tshirts.html"><a href="jewery.html">Jewery</a></li>
+                <li id="tshirts.html"><a href="./Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
             </ul>
