--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
                 <li id="Home"><a href="home.html">Home</a></li>
                 <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
-                <li id="tshirts.html"><a href="jewery.html">Jewery</a></li>
+                <li id="tshirts.html"><a href="./Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
             </ul>
