--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "shoes.css">
+    <link rel = "stylesheet" href = "sunglasses.css">
     <link rel = "stylesheet" href = "../Dido_work/navbar.css">
     <title>Trousers</title>
 </head>
@@ -13,17 +13,17 @@
             <ul class="menu">
                 <li id="Home"><a href="../home.html">Home</a></li>
                 <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
-                <li id="trousers.html"><a href="trousers.html">Trousers</a></li>
-                <li id="tshirts.html"><a href="shoes.html">Shoes</a></li>
-                <li id="tshirts.html"><a href="../Dido_work/sunglasses.html">Sunglasses</a></li>
+                <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
+                <li id="tshirts.html"><a href="../Martin_work/shoes.html">Shoes</a></li>
+                <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
             </ul>
         </div>
     </nav>
-    <div id = "shoes_offer1">
+    <div id = "sunglasses_offer_1">
         <img id = "right_arrow" src = "../right_arrow.png">
         <img id = "left_arrow" src = "../left_arrow.png">
-        <img id = "image_shoes_1" src = "shoes_11.jpg" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <img id = "image_sunglasses_1" src = "sunglasses1.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
