--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
                 <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="./Martin_work/shoes.html">Shoes</a></li>
-                <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
+                <li id="tshirts.html"><a href="./Dido_work/sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
             </ul>
         </div>
