--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -21,8 +21,8 @@
         </div>
     </nav>
     <div id = "shoes_offer1">
-        <img id = "right_arrow" src = "../right_arrow.png">
-        <img id = "left_arrow" src = "../left_arrow.png">
+        <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()'>
+        <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()'>
         <img id = "image_shoes_1" src = "shoes_11.jpg" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
