Made new page and corrected home images
changed adresses of the home images and made all functionality for the first offer of the sunglasses page

--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -20,16 +20,16 @@
             </ul>
         </div>
     </nav>
-    <div id = "sunglasses_offer_1">
-        <img id = "right_arrow" src = "../right_arrow.png">
-        <img id = "left_arrow" src = "../left_arrow.png">
-        <img id = "image_sunglasses_1" src = "sunglasses1.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
-        <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
+    <div id = "sunglasses_offer1">
+        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick="RigthArrow()">
+        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick="LeftArrow()">
+        <img id = "image_sunglasses_1" src = "sunglasses1.1.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <h3 id = "description_sunglasses_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
-        <h2 id = "price_shoes_1">$99.99</h2>
-        <button id = "add_to_card_shoes_1">Add to card</button>
+        <h2 id = "price_sunglasses_1">$99.99</h2>
+        <button id = "add_to_card_sunglasses_1">Add to card</button>
     </div>
-    <script src = 'shoes.js'></script>
+    <script src = 'sunglasses.js'></script>
 </body>
 </html>
