--- a/home.html
+++ b/home.html
@@ -20,19 +20,19 @@
         </div>
     </nav>
     <div id="tshirts">
-        <a href="/Sasho_work/tshirts.html"><img id = "TshirtImg" src="../IT-project/Images/img1.png"></a> 
+        <a href="/Sasho_work/tshirts.html"><img id = "TshirtImg" src="../Images/img1.png"></a> 
         <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="pants">
-        <a href="pants.html"><img id = "PantsImg" src="../IT-project/Images/img2.png"></a> 
+        <a href="pants.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
         <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="sunglasses">
-        <a href="sunglasses.html"><img id = "SunglassesImg" src="../IT-project/Images/img3.png"></a> 
+        <a href="sunglasses.html"><img id = "SunglassesImg" src="../Images/img3.png"></a> 
         <p id="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="shoes">
-        <a href="shoes.html"><img id = "ShoesImg" src="../IT-project/Images/img4.png"></a> 
+        <a href="shoes.html"><img id = "ShoesImg" src="../Images/img4.png"></a> 
         <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div>
     
