Changed titles and removed <a> tags

--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "sunglasses.css">
     <link rel = "stylesheet" href = "../Dido_work/navbar.css">
-    <title>Trousers</title>
+    <title>Sunglasses</title>
 </head>
 <body>
     <nav>
