--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home page</title>
     <link href = "home.css" rel = "stylesheet">
 </head>
 <body>
@@ -20,19 +20,19 @@
         </div>
     </nav>
     <div id="tshirts">
-        <a href="/Sasho_work/tshirts.html"><img id = "TshirtImg" src="../Images/img1.png"></a> 
+        <img id = "TshirtImg" src="../Images/img1.png"> 
         <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="pants">
-        <a href="pants.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
+        <img id = "PantsImg" src="..//Images/img2.png"> 
         <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="sunglasses">
-        <a href="sunglasses.html"><img id = "SunglassesImg" src="../Images/img3.png"></a> 
+        <img id = "SunglassesImg" src="../Images/img3.png">
         <p id="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="shoes">
-        <a href="shoes.html"><img id = "ShoesImg" src="../Images/img4.png"></a> 
+        <img id = "ShoesImg" src="../Images/img4.png">
         <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div>
     
