--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "shoes.css">
     <link rel = "stylesheet" href = "../Dido_work/navbar.css">
-    <title>Trousers</title>
+    <title>Shoes</title>
 </head>
 <body>
     <nav>
