--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -20,15 +20,27 @@
             </ul>
         </div>
     </nav>
+
     <div id = "shoes_offer1">
-        <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick = 'onRightArrowClick()'>
-        <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick = 'onLeftArrowClick()'>
-        <img id = "image_shoes_1" src = "shoes_11.jpg" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
+        <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
+        <img id = "image_shoes_1" src = "../Images/shoes_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_shoes_1">$99.99</h2>
         <button id = "add_to_card_shoes_1">Add to card</button>
+    </div>
+
+    <div id = "shoes_offer2">
+        <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
+        <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
+        <img id = "image_shoes_2" src = "../Images/shoes_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <h3 id = "description_shoes_2">
+            Nike shoes!!!
+        </h3>
+        <h2 id = "price_shoes_2">$252.49</h2>
+        <button id = "add_to_card_shoes_2">Add to card</button>
     </div>
     <script src = 'shoes.js'></script>
 </body>
