--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -29,7 +29,7 @@
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_shoes_1">$99.99</h2>
-        <button id = "add_to_card_shoes_1">Add to card</button>
+        <button id = "add_to_card_shoes_1">Add to cart</button>
     </div>
 
     <div id = "shoes_offer2">
@@ -40,7 +40,7 @@
             Nike shoes!!!
         </h3>
         <h2 id = "price_shoes_2">$252.49</h2>
-        <button id = "add_to_card_shoes_2">Add to card</button>
+        <button id = "add_to_card_shoes_2">Add to cart</button>
     </div>
     <script src = 'shoes.js'></script>
 </body>
