Added third shoes offer

--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -16,7 +16,7 @@
                 <li id="trousers.html"><a href="trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="../Dido_work/sunglasses.html">Sunglasses</a></li>
-                <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
+                <li id="tshirts.html"><a href="../Dido_work/cart.html">Shopping Cart</a></li>
             </ul>
         </div>
     </nav>
@@ -32,6 +32,8 @@
         <button id = "add_to_card_shoes_1">Add to cart</button>
     </div>
 
+
+
     <div id = "shoes_offer2">
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
@@ -42,6 +44,20 @@
         <h2 id = "price_shoes_2">$252.49</h2>
         <button id = "add_to_card_shoes_2">Add to cart</button>
     </div>
+
+
+    <div id = "shoes_offer3">
+        <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
+        <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
+        <img id = "image_shoes_3" src = "../Images/shoes_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Nike Men's Running Shoes" mouse>
+        <h3 id = "description_shoes_3">
+            ffjngvbonwogtni
+        </h3>
+        <h2 id = "price_shoes_3">$71.95</h2>
+        <button id = "add_to_card_shoes_3">Add to cart</button>
+    </div>
+
+
     <script src = 'shoes.js'></script>
 </body>
 </html>
