--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -16,20 +16,43 @@
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="../Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
-                <li id="tshirts.html"><a href="shoppingcart.html">Shopping Cart</a></li>
+                <li id="tshirts.html"><a href="cart.html">Shopping Cart</a></li>
             </ul>
         </div>
     </nav>
     <div id = "sunglasses_offer1">
-        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick="RigthArrow()">
-        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' onclick="LeftArrow()">
-        <img id = "image_sunglasses_1" src = "sunglasses1.1.png" onmouseover = 'hoverImage()' onmouseout= 'unhoverImage()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+
+        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="RigthArrow()">
+
+        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="LeftArrow()">
+
+        <img id = "image_sunglasses_1" src = "sunglasses1.1.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+
         <h3 id = "description_sunglasses_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_sunglasses_1">$99.99</h2>
+
         <button id = "add_to_card_sunglasses_1">Add to card</button>
     </div>
+
+    <div id = "sunglasses_offer2">
+
+        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="RigthArrow()">
+        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="LeftArrow()">
+
+        <img id = "image_sunglasses_2" src = "sunglasses1.1.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+
+        <h3 id = "description_sunglasses_2">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
+            Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
+        </h3>
+
+        <h2 id = "price_sunglasses_2">$99.99</h2>
+
+        <button onclick ="AddtoCart()" id = "add_to_card_sunglasses_2">Add to card</button>
+
+    </div>
+
     <script src = 'sunglasses.js'></script>
 </body>
 </html>
