Cart functionality and image display
made all all the functionality to display the name and image of the product added to card made another js file that is only for the add to cart function

--- a/Dido_work/cart.html
+++ b/Dido_work/cart.html
@@ -20,7 +20,7 @@
             </ul>
         </div>
     </nav>
-    <h1 id="MyCart"></h1>
+    <div id="MyCart"></div>
 
     <button onclick="ResetCart()">Reset Cart</button>
 
