--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -33,7 +33,7 @@
         </h3>
         <h2 id = "price_sunglasses_1">$99.99</h2>
 
-        <button id = "add_to_card_sunglasses_1">Add to card</button>
+        <button onclick= "AddtoCart(image_sunglasses_1)" id = "add_to_card_sunglasses_1">Add to card</button>
     </div>
 
     <div id = "sunglasses_offer2">
@@ -49,10 +49,11 @@
 
         <h2 id = "price_sunglasses_2">$99.99</h2>
 
-        <button onclick ="AddtoCart()" id = "add_to_card_sunglasses_2">Add to card</button>
+        <button onclick ="AddtoCart(image_sunglasses_2)" id = "add_to_card_sunglasses_2">Add to card</button>
 
     </div>
 
     <script src = 'sunglasses.js'></script>
+    <script src="function_addToCart.js"></script>
 </body>
 </html>
