--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -29,7 +29,7 @@
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_shoes_1">$99.99</h2>
-        <button id = "add_to_card_shoes_1">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_1)" id = "add_to_card_shoes_1">Add to cart</button>
     </div>
 
 
@@ -59,5 +59,6 @@
 
 
     <script src = 'shoes.js'></script>
+    <script src="../Dido_work/function_addToCart.js"></script>
 </body>
 </html>
