Made the cart page
Made all the functionality of the cart page and made the second offer images for the sunglasses page

--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -29,7 +29,7 @@
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_shoes_1">$99.99</h2>
-        <button onclick="AddtoCart(image_shoes_1)" id = "add_to_card_shoes_1">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_1, 'price_shoes_1')" id = "add_to_card_shoes_1">Add to cart</button>
     </div>
 
 
@@ -42,7 +42,7 @@
             Nike shoes!!!
         </h3>
         <h2 id = "price_shoes_2">$252.49</h2>
-        <button id = "add_to_card_shoes_2">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_2, 'price_shoes_2')" id = "add_to_card_shoes_2">Add to cart</button>
     </div>
 
 
@@ -54,7 +54,7 @@
             ffjngvbonwogtni
         </h3>
         <h2 id = "price_shoes_3">$71.95</h2>
-        <button id = "add_to_card_shoes_3">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_3, 'price_shoes_3')" id = "add_to_card_shoes_3">Add to cart</button>
     </div>
 
 
