--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -22,9 +22,9 @@
     </nav>
     <div id = "sunglasses_offer1">
 
-        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="RigthArrow()">
+        <img id = "right_arrow1" src = "../right_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="RightArrow1()">
 
-        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="LeftArrow()">
+        <img id = "left_arrow1" src = "../left_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="LeftArrow1()">
 
         <img id = "image_sunglasses_1" src = "sunglasses1.1.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
 
@@ -33,23 +33,23 @@
         </h3>
         <h2 id = "price_sunglasses_1">$99.99</h2>
 
-        <button onclick= "AddtoCart(image_sunglasses_1)" id = "add_to_card_sunglasses_1">Add to card</button>
+        <button onclick= "AddtoCart(image_sunglasses_1, 'price_sunglasses_1')" id = "add_to_card_sunglasses_1">Add to card</button>
     </div>
 
     <div id = "sunglasses_offer2">
 
-        <img id = "right_arrow" src = "../right_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="RigthArrow()">
-        <img id = "left_arrow" src = "../left_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="LeftArrow()">
+        <img id = "right_arrow2" src = "../right_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="RightArrow2()">
+        <img id = "left_arrow2" src = "../left_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="LeftArrow2()">
 
-        <img id = "image_sunglasses_2" src = "sunglasses1.1.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <img id = "image_sunglasses_2" src = "../Images/sunglasses2.3.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
 
         <h3 id = "description_sunglasses_2">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
 
-        <h2 id = "price_sunglasses_2">$99.99</h2>
+        <h2 id = "price_sunglasses_2">$79.99</h2>
 
-        <button onclick ="AddtoCart(image_sunglasses_2)" id = "add_to_card_sunglasses_2">Add to card</button>
+        <button onclick ="AddtoCart(image_sunglasses_2, 'price_sunglasses_2')" id = "add_to_card_sunglasses_2">Add to card</button>
 
     </div>
 
