--- a/home.html
+++ b/home.html
@@ -11,16 +11,16 @@
         <div id="container">
             <ul class="menu">
                 <li id="Home"><a href="home.html">Home</a></li>
-                <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
+                <li id="tshirts.html"><a href="./Sasho_work/tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="./Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="./Dido_work/sunglasses.html">Sunglasses</a></li>
-                <li id="tshirts.html"><a href="cart.html">Shopping Cart</a></li>
+                <li id="tshirts.html"><a href="./Dido_work/cart.html">Shopping Cart</a></li>
             </ul>
         </div>
     </nav>
     <div id="tshirts">
-        <img id = "TshirtImg" src="../Images/img1.png"> 
+        <img id = "TshirtImg" src="../Images/i_m_cool_black_kid.png"> 
         <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="pants">
