--- a/Sasho_work/tshirts.html
+++ b/Sasho_work/tshirts.html
@@ -51,8 +51,8 @@
         <h3 id = "description_tshirt_3">
             For broken sigmas and lone wolfs
         </h3>
-        <h2 id = "price_tshirt_3">$71.95</h2>
-        <button onclick="AddtoCart(image_shoes_3, 'price_tshirt_3')" id = "add_to_card_tshirt_3">Add to cart</button>
+        <h2 id = "price_tshirt_3">$7.95</h2>
+        <button onclick="AddtoCart(image_tshirt_3, 'price_tshirt_3')" id = "add_to_card_tshirt_3">Add to cart</button>
     </div>
 
 
