--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "sunglasses.css">
-    <link rel = "stylesheet" href = "../Dido_work/navbar.css">
+    <link rel="stylesheet" href="sunglasses.css">
+    <link rel="stylesheet" href="../Dido_work/navbar.css">
     <title>Sunglasses</title>
 </head>
 <body>
@@ -20,40 +20,25 @@
             </ul>
         </div>
     </nav>
-    <div id = "sunglasses_offer1">
-
-        <img id = "right_arrow1" src = "../right_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="RightArrow1()">
-
-        <img id = "left_arrow1" src = "../left_arrow.png"onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick="LeftArrow1()">
-
-        <img id = "image_sunglasses_1" src = "sunglasses1.1.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
-
-        <h3 id = "description_sunglasses_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
-            Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
-        </h3>
-        <h2 id = "price_sunglasses_1">$99.99</h2>
-
-        <button onclick= "AddtoCart(image_sunglasses_1, 'price_sunglasses_1')" id = "add_to_card_sunglasses_1">Add to card</button>
+    <div class="offers-container">
+        <div class="sunglasses_offer" id="sunglasses_offer1">
+            <img id="right_arrow1" src="../right_arrow.png" onmouseover="hoverImage1()" onmouseout="unhoverImage1()" onclick="RightArrow1()">
+            <img id="left_arrow1" src="../left_arrow.png" onmouseover="hoverImage1()" onmouseout="unhoverImage1()" onclick="LeftArrow1()">
+            <img id="image_sunglasses_1" src="sunglasses1.1.png" onmouseover="hoverImage1()" onmouseout="unhoverImage1()" alt="New Balance Men's Fresh Foam Roav V1 Classic Sneaker">
+            <h3 id="description_sunglasses_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style. Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.</h3>
+            <h2 id="price_sunglasses_1">$99.99</h2>
+            <button onclick="AddtoCart(image_sunglasses_1, 'price_sunglasses_1')" id="add_to_cart_sunglasses_1">Add to cart</button>
+        </div>
+        <div class="sunglasses_offer" id="sunglasses_offer2">
+            <img id="right_arrow2" src="../right_arrow.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" onclick="RightArrow2()">
+            <img id="left_arrow2" src="../left_arrow.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" onclick="LeftArrow2()">
+            <img id="image_sunglasses_2" src="../Images/sunglasses2.3.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" alt="New Balance Men's Fresh Foam Roav V1 Classic Sneaker">
+            <h3 id="description_sunglasses_2">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style. Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.</h3>
+            <h2 id="price_sunglasses_2">$79.99</h2>
+            <button onclick="AddtoCart(image_sunglasses_2, 'price_sunglasses_2')" id="add_to_cart_sunglasses_2">Add to cart</button>
+        </div>
     </div>
-
-    <div id = "sunglasses_offer2">
-
-        <img id = "right_arrow2" src = "../right_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="RightArrow2()">
-        <img id = "left_arrow2" src = "../left_arrow.png"onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick="LeftArrow2()">
-
-        <img id = "image_sunglasses_2" src = "../Images/sunglasses2.3.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
-
-        <h3 id = "description_sunglasses_2">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
-            Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
-        </h3>
-
-        <h2 id = "price_sunglasses_2">$79.99</h2>
-
-        <button onclick ="AddtoCart(image_sunglasses_2, 'price_sunglasses_2')" id = "add_to_card_sunglasses_2">Add to card</button>
-
-    </div>
-
-    <script src = 'sunglasses.js'></script>
+    <script src="sunglasses.js"></script>
     <script src="function_addToCart.js"></script>
 </body>
 </html>
