--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -49,7 +49,7 @@
     <div id = "shoes_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_shoes_3" src = "../Images/shoes_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Nike Men's Running Shoes" mouse>
+        <img id = "image_shoes_3" src = "../Images/shoes_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Nike Air Max Green" mouse>
         <h3 id = "description_shoes_3">
             ffjngvbonwogtni
         </h3>
