--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -12,7 +12,7 @@
         <div id="container">
             <ul class="menu">
                 <li id="Home"><a href="../home.html">Home</a></li>
-                <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
+                <li id="tshirts.html"><a href="../Sasho_work/tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="../Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
