--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -24,7 +24,7 @@
     <div id = "shoes_offer1">
         <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
         <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
-        <img id = "image_shoes_1" src = "../Images/shoes_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <img id = "image_shoes_1" src = "../Images/shoes_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker Beige" mouse>
         <h3 id = "description_shoes_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style.
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
@@ -37,7 +37,7 @@
     <div id = "shoes_offer2">
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
-        <img id = "image_shoes_2" src = "../Images/shoes_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "New Balance Men's Fresh Foam Roav V1 Classic Sneaker" mouse>
+        <img id = "image_shoes_2" src = "../Images/shoes_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike Air Jordan 1 Light Brown" mouse>
         <h3 id = "description_shoes_2">
             Nike shoes!!!
         </h3>
