added trousers for pookie

--- a/home.html
+++ b/home.html
@@ -20,19 +20,19 @@
         </div>
     </nav>
     <div id="tshirts">
-        <img id = "TshirtImg" src="../Images/i_m_cool_black_kid.png"> 
+        <a href="./Sasho_work/tshirts.html"><img id = "TshirtImg" src="../Images/i_m_cool_black_kid.png"></a> 
         <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="pants">
-        <img id = "PantsImg" src="..//Images/img2.png"> 
+        <a href="./Sasho_work/trousers.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
         <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="sunglasses">
-        <img id = "SunglassesImg" src="../Images/img3.png">
+        <a href="./Dido_work/sunglasses.html"><img id = "SunglassesImg" src="../Images/img3.png"></a>
         <p id="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div><br>
     <div id="shoes">
-        <img id = "ShoesImg" src="../Images/img4.png">
+        <a href="./Martin_work/shoes.html"><img id = "ShoesImg" src="../Images/img4.png"></a>
         <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
     </div>
     
