Corrected path to trousers and added first offer for trousers

--- a/Dido_work/cart.html
+++ b/Dido_work/cart.html
@@ -13,7 +13,7 @@
             <ul class="menu">
                 <li id="Home"><a href="../home.html">Home</a></li>
                 <li id="tshirts.html"><a href="../Sasho_work/tshirts.html">T-Shirts</a></li>
-                <li id="tshirts.html"><a href="trousers.html">Trousers</a></li>
+                <li id="tshirts.html"><a href="../Martin_work/trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="../Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="cart.html">Shopping Cart</a></li>
