--- a/Martin_work/trousers.html
+++ b/Martin_work/trousers.html
@@ -24,8 +24,11 @@
     <div id = "tr_offer1">
         <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
         <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
-        <img id = "image_tr_1" src = "../Images/tr_image1-removebg-preview.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Tansozer Trousers" mouse>
-        <h3 id = "description_tr_1">Trousers/Sweatpants for everyday use</h3>
+        <img id = "image_tr_1" src = "../Images/trousers_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Mens Fashion Athletic Joggers Pants">
+        <h3 id = "description_tr_1">
+            Our brand "Cot-Oath" is committed to creating the most suitable clothing for current trends, 
+            and we hope to provide quality services. 
+        </h3>
         <h2 id = "price_tr_1">$9.99</h2>
         <button onclick="AddtoCart(image_tshirt_1, 'price_tr_1')" id = "add_to_card_tr_1">Add to cart</button>
     </div>
@@ -47,7 +50,7 @@
     <div id = "tr_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_tshirt_3" src = "../Images/wolf_image1-removebg-preview.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Sad wolf " mouse>
+        <img id = "image_tshirt_3" src = "../Images/trousers_12.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Sad wolf " mouse>
         <h3 id = "description_tr_3">
             For broken sigmas and lone wolfs
         </h3>
