--- a/Sasho_work/tshirts.html
+++ b/Sasho_work/tshirts.html
@@ -13,7 +13,7 @@
             <ul class="menu">
                 <li id="Home"><a href="../home.html">Home</a></li>
                 <li id="tshirts.html"><a href="tshirts.html">T-Shirts</a></li>
-                <li id="trousers.html"><a href="trousers.html">Trousers</a></li>
+                <li id="trousers.html"><a href="../Martin_work/trousers.html">Trousers</a></li>
                 <li id="tshirts.html"><a href="../Martin_work/shoes.html">Shoes</a></li>
                 <li id="tshirts.html"><a href="../Dido_work/sunglasses.html">Sunglasses</a></li>
                 <li id="tshirts.html"><a href="../Dido_work/cart.html">Shopping Cart</a></li>
