Trousers page done

--- a/Martin_work/trousers.html
+++ b/Martin_work/trousers.html
@@ -30,32 +30,33 @@
             and we hope to provide quality services. 
         </h3>
         <h2 id = "price_tr_1">$9.99</h2>
-        <button onclick="AddtoCart(image_tshirt_1, 'price_tr_1')" id = "add_to_card_tr_1">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_1, 'price_tr_1')" id = "add_to_card_tr_1">Add to cart</button>
     </div>
-
 
 
     <div id = "tr_offer2">
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
-        <img id = "image_tr_2" src = "" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike tshirt image" mouse>
+        <img id = "image_tr_2" src = "../Images/trousers_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Essentials Men's Classic-Fit Wrinkle-Resistant Flat-Front Chino Pant">
         <h3 id = "description_tr_2">
-            Nike!!!
+            Cargo pants with 6 multi-purpose cargo pockets, 
+            side pockets with button closure decoration, suitable for carrying phone, wallet and other useful items.
         </h3>
         <h2 id = "price_tr_2">$19.99</h2>
-        <button onclick="AddtoCart(image_tshirt_2, 'price_tr_2')" id = "add_to_card_tr_2">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_2, 'price_tr_2')" id = "add_to_card_tr_2">Add to cart</button>
     </div>
 
 
     <div id = "tr_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_tshirt_3" src = "../Images/trousers_12.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Sad wolf " mouse>
+        <img id = "image_tr_3" src = "../Images/trousers_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Men's Casual Drawstring Pants Regular Fit Elastic Waist Cotton Basic Straight Leg Cargo Pants">
         <h3 id = "description_tr_3">
-            For broken sigmas and lone wolfs
+            Men's casual trousers are made from high quality fabric of 55% polyester and 45% cotton, offers a really tight smooth feel. 
+            These straight leg pants are breathable and lightweight, do not wrinkle and pill easily.
         </h3>
         <h2 id = "price_tr_3">$7.95</h2>
-        <button onclick="AddtoCart(image_tshirt_3, 'price_tr_3')" id = "add_to_card_tr_3">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_3, 'price_tr_3')" id = "add_to_card_tr_3">Add to cart</button>
     </div>
 
 
