Added colors to the trousers
The color of the trousers is displayed in the shopping cart when the products is bought

--- a/Martin_work/trousers.html
+++ b/Martin_work/trousers.html
@@ -24,7 +24,7 @@
     <div id = "tr_offer1">
         <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
         <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
-        <img id = "image_tr_1" src = "../Images/trousers_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Mens Fashion Athletic Joggers Pants">
+        <img id = "image_tr_1" src = "../Images/trousers_11.jpg" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Mens Fashion Athletic Joggers Pants Dark Red">
         <h3 id = "description_tr_1">
             Our brand "Cot-Oath" is committed to creating the most suitable clothing for current trends, 
             and we hope to provide quality services. 
@@ -37,7 +37,7 @@
     <div id = "tr_offer2">
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
-        <img id = "image_tr_2" src = "../Images/trousers_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Essentials Men's Classic-Fit Wrinkle-Resistant Flat-Front Chino Pant">
+        <img id = "image_tr_2" src = "../Images/trousers_21.jpg" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Essentials Men's Classic-Fit Wrinkle-Resistant Flat-Front Chino Pants Light Green">
         <h3 id = "description_tr_2">
             Cargo pants with 6 multi-purpose cargo pockets, 
             side pockets with button closure decoration, suitable for carrying phone, wallet and other useful items.
@@ -50,7 +50,7 @@
     <div id = "tr_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_tr_3" src = "../Images/trousers_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Men's Casual Drawstring Pants Regular Fit Elastic Waist Cotton Basic Straight Leg Cargo Pants">
+        <img id = "image_tr_3" src = "../Images/trousers_31.jpg" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Men's Casual Drawstring Pants Regular Fit Elastic Waist Cotton Basic Straight Leg Cargo Pants Blue">
         <h3 id = "description_tr_3">
             Men's casual trousers are made from high quality fabric of 55% polyester and 45% cotton, offers a really tight smooth feel. 
             These straight leg pants are breathable and lightweight, do not wrinkle and pill easily.
