Added product message
When the product is added to the cart, the button of the product change its text to show the user that the product has been added to the cart

--- a/Martin_work/trousers.html
+++ b/Martin_work/trousers.html
@@ -30,7 +30,7 @@
             and we hope to provide quality services. 
         </h3>
         <h2 id = "price_tr_1">$9.99</h2>
-        <button onclick="AddtoCart(image_tr_1, 'price_tr_1')" id = "add_to_card_tr_1">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_1, 'price_tr_1', 'add_to_card_tr_1')" id = "add_to_card_tr_1">Add to cart</button>
     </div>
 
 
@@ -43,7 +43,7 @@
             side pockets with button closure decoration, suitable for carrying phone, wallet and other useful items.
         </h3>
         <h2 id = "price_tr_2">$19.99</h2>
-        <button onclick="AddtoCart(image_tr_2, 'price_tr_2')" id = "add_to_card_tr_2">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_2, 'price_tr_2', 'add_to_card_tr_2')" id = "add_to_card_tr_2">Add to cart</button>
     </div>
 
 
@@ -56,7 +56,7 @@
             These straight leg pants are breathable and lightweight, do not wrinkle and pill easily.
         </h3>
         <h2 id = "price_tr_3">$7.95</h2>
-        <button onclick="AddtoCart(image_tr_3, 'price_tr_3')" id = "add_to_card_tr_3">Add to cart</button>
+        <button onclick="AddtoCart(image_tr_3, 'price_tr_3', 'add_to_card_tr_3')" id = "add_to_card_tr_3">Add to cart</button>
     </div>
 
 
