--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -27,7 +27,7 @@
             <img id="image_sunglasses_1" src="sunglasses1.1.png" onmouseover="hoverImage1()" onmouseout="unhoverImage1()" alt="New Balance Men's Fresh Foam Roav V1 Classic Sneaker">
             <h3 id="description_sunglasses_1">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style. Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.</h3>
             <h2 id="price_sunglasses_1">$99.99</h2>
-            <button onclick="AddtoCart(image_sunglasses_1, 'price_sunglasses_1')" id="add_to_cart_sunglasses_1">Add to cart</button>
+            <button onclick="AddtoCart(image_sunglasses_1, 'price_sunglasses_1', 'add_to_cart_sunglasses_1')" id="add_to_cart_sunglasses_1">Add to cart</button>
         </div>
         <div class="sunglasses_offer" id="sunglasses_offer2">
             <img id="right_arrow2" src="../right_arrow.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" onclick="RightArrow2()">
@@ -35,7 +35,7 @@
             <img id="image_sunglasses_2" src="../Images/sunglasses2.3.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" alt="New Balance Men's Fresh Foam Roav V1 Classic Sneaker">
             <h3 id="description_sunglasses_2">The New Balance Fresh Foam Roav v1 running shoes are the ultimate in casual athletic style. Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.</h3>
             <h2 id="price_sunglasses_2">$79.99</h2>
-            <button onclick="AddtoCart(image_sunglasses_2, 'price_sunglasses_2')" id="add_to_cart_sunglasses_2">Add to cart</button>
+            <button onclick="AddtoCart(image_sunglasses_2, 'price_sunglasses_2', 'add_to_cart_sunglasses_2')" id="add_to_cart_sunglasses_2">Add to cart</button>
         </div>
     </div>
     <script src="sunglasses.js"></script>
