--- a/Martin_work/shoes.html
+++ b/Martin_work/shoes.html
@@ -29,7 +29,7 @@
             Pairing a bold, attractive look with plush comfort, these cushioned running shoes are in a league of their own.
         </h3>
         <h2 id = "price_shoes_1">$99.99</h2>
-        <button onclick="AddtoCart(image_shoes_1, 'price_shoes_1')" id = "add_to_card_shoes_1">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_1, 'price_shoes_1', 'add_to_card_shoes_1')" id = "add_to_card_shoes_1">Add to cart</button>
     </div>
 
 
@@ -42,7 +42,7 @@
             Take another look and you'll notice the exaggerated proportions, visually setting your Js apart from the rest. Get ready to get noticed.
         </h3>
         <h2 id = "price_shoes_2">$252.49</h2>
-        <button onclick="AddtoCart(image_shoes_2, 'price_shoes_2')" id = "add_to_card_shoes_2">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_2, 'price_shoes_2', 'add_to_card_shoes_2')" id = "add_to_card_shoes_2">Add to cart</button>
     </div>
 
 
@@ -56,7 +56,7 @@
             Plus, visible Max Air cushioning adds comfort to your journey.
         </h3>
         <h2 id = "price_shoes_3">$71.95</h2>
-        <button onclick="AddtoCart(image_shoes_3, 'price_shoes_3')" id = "add_to_card_shoes_3">Add to cart</button>
+        <button onclick="AddtoCart(image_shoes_3, 'price_shoes_3', 'add_to_card_shoes_3')" id = "add_to_card_shoes_3">Add to cart</button>
     </div>
 
 
