аддед десцриптион анд цхангед имагес

--- a/Sasho_work/tshirts.html
+++ b/Sasho_work/tshirts.html
@@ -24,8 +24,8 @@
     <div id = "tshirt_offer1">
         <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
         <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
-        <img id = "image_tshirt_1" src = "../Images/puma_image2-removebg-preview.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Puma tshirt image" mouse>
-        <h3 id = "description_tshirt_1">Sports shirt Puma</h3>
+        <img id = "image_tshirt_1" src = "../Images/puma_image1-removebg-preview.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Puma tshirt " mouse>
+        <h3 id = "description_tshirt_1">Retro Puma Tshirt</h3>
         <h2 id = "price_tshirt_1">$9.99</h2>
         <button onclick="AddtoCart(image_tshirt_1, 'price_tshirt_1')" id = "add_to_card_tshirt_1">Add to cart</button>
     </div>
@@ -35,9 +35,9 @@
     <div id = "tshirt_offer2">
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
-        <img id = "image_tshirt_2" src = "../Images/nike_image1-removebg-preview.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike tshirt image" mouse>
+        <img id = "image_tshirt_2" src = "../Images/nike_image1-removebg-preview.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike tshirt " mouse>
         <h3 id = "description_tshirt_2">
-            Nike!!!
+            Sport Tshirt Nike for Training and Outdoor Activity 
         </h3>
         <h2 id = "price_tshirt_2">$19.99</h2>
         <button onclick="AddtoCart(image_tshirt_2, 'price_tshirt_2')" id = "add_to_card_tshirt_2">Add to cart</button>
@@ -47,9 +47,9 @@
     <div id = "tshirt_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_tshirt_3" src = "../Images/wolf_image1-removebg-preview.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Sad wolf " mouse>
+        <img id = "image_tshirt_3" src = "../Images/jj_1.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Jack & Jones Tshirt" mouse>
         <h3 id = "description_tshirt_3">
-            For broken sigmas and lone wolfs
+            JACK & JONES Men's Tshirt
         </h3>
         <h2 id = "price_tshirt_3">$7.95</h2>
         <button onclick="AddtoCart(image_tshirt_3, 'price_tshirt_3')" id = "add_to_card_tshirt_3">Add to cart</button>
