--- a/home.html
+++ b/home.html
@@ -10,7 +10,6 @@
     <nav>
         <div id="container">
             <ul class="menu">
-                <li  id="Puma"><a href="./Sasho_work/Puma/Puma.html"></a></li>
                 <li id="Home"><a href="home.html">Home</a></li>
                 <li id="tshirts.html"><a href="./Sasho_work/tshirts.html">T-Shirts</a></li>
                 <li id="tshirts.html"><a href="./Martin_work/trousers.html">Trousers</a></li>
@@ -22,19 +21,19 @@
     </nav>
     <div id="tshirts">
         <a href="./Sasho_work/tshirts.html"><img id = "TshirtImg" src="../Images/i_m_cool_black_kid.png"></a> 
-        <p id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+        <p id="text1">Fashionable Tshirts with Great Designs!</p>
     </div><br>
     <div id="pants">
-        <a href="./Sasho_work/trousers.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
-        <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+        <a href="./Martin_work/trousers.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
+        <p id="text2">Trendy and Comfortable Trousers!</p>
     </div><br>
     <div id="sunglasses">
         <a href="./Dido_work/sunglasses.html"><img id = "SunglassesImg" src="../Images/img3.png"></a>
-        <p id="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+        <p id="text3">Elegant Sunglasses for Men and for Women!</p>
     </div><br>
     <div id="shoes">
         <a href="./Martin_work/shoes.html"><img id = "ShoesImg" src="../Images/img4.png"></a>
-        <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo consequuntur natus quam quidem itaque qui sint animi labore quisquam tenetur iusto fuga deserunt incidunt ducimus atque aliquam, ipsam adipisci!</p>
+        <p id="text4">Popular and Cool Shoes for a Good Price!</p>
     </div>
     
     <footer>
