--- a/Dido_work/cart.html
+++ b/Dido_work/cart.html
@@ -22,7 +22,7 @@
     </nav>
     <div id="MyCart"></div>
 
-    <button onclick="ResetCart()">Reset Cart</button>
+    <button id = 'reset_cart_button' onclick="ResetCart()">Reset Cart</button>
 
     <script src = 'cart.js'></script>
 </body>
